--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "test": "npm run system-test"
   },
   "dependencies": {
-    "@google-cloud/datastore": "^6.0.0",
+    "@google-cloud/datastore": "^6.5.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "mocha": "^9.0.0",
+    "nodemon": "^2.0.13",
     "supertest": "^6.0.0"
   },
   "bugs": {
